--- a/index.html
+++ b/index.html
@@ -37,5 +37,9 @@
       </fieldset>
       <input type="submit" name="" value="Submit">
     </form>
+
+    /* ------- test link -------- */
+
+    <p>Please take our <a href="surveyform.html">Survey</a></a></p>
   </body>
 </html>
