survey link try 2

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <input type="submit" name="" value="Submit">
     </form>
 
-    /* ------- test link -------- */
+    <!--- survey link --->
 
     <p>Please take our <a href="surveyform.html">Survey</a></a></p>
   </body>
